--- a/src/package.json
+++ b/src/package.json
@@ -1,12 +1,14 @@
 {
   "name": "aws-lambda-response",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A simple package for sending standard responses in AWS Lambda callback functions.",
   "main": "index.js",
   "scripts": {
     "test": "npm run-script lint && npm run-script unit",
     "lint": "eslint {./*.js\\,./tests/*.js}",
-    "unit": "babel-node ./node_modules/.bin/babel-istanbul cover ./node_modules/mocha/bin/_mocha -- tests/*.js"
+    "unit": "babel-node ./node_modules/.bin/babel-istanbul cover ./node_modules/mocha/bin/_mocha -- tests/*.js",
+    "compile": "babel . --out-dir ../dist --ignore='node_modules/**\\,coverage/**' --copy-files",
+    "deploy": "cp ../README.md README.md && npm publish"
   },
   "keywords": [
     "response",
@@ -15,7 +17,14 @@
     "api",
     "gateway"
   ],
-  "author": "Aaron Williams",
+  "author": {
+    "name": "Aaron Williams",
+    "email": "aaronwilliams9797@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aceew/aws-lambda-response.git"
+  },
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.6.1"
