More friendly readme

--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aws-lambda-response",
-  "version": "1.0.4",
-  "description": "A simple package for sending standard responses in AWS Lambda callback functions.",
+  "version": "1.0.5",
+  "description": "A simple package for building standard responses in AWS Lambda callback functions.",
   "main": "index.js",
   "scripts": {
     "test": "npm run-script lint && npm run-script unit",
